# com.unity.perception

./: .editorconfig  .gitattributes  .gitignore  .npmignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  TUTORIAL.md
com.unity.perception/Editor/Pyrception/pyrception-utils/pyrception_utils/datasetinsights_master/: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
com.unity.perception/Editor/Pyrception/pyrception-utils/pyrception_utils/datasetinsights_master/.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
com.unity.perception/Editor/Pyrception/pyrception-utils/pyrception_utils/datasetinsights_master/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  questions-about-datasetinsights.md
com.unity.perception/Editor/Pyrception/pyrception-utils/pyrception_utils/datasetinsights_master/.github/workflows/: linting-and-unittests.yaml  publish-docker-hub.yaml  publish-pypi.yaml
com.unity.perception/Editor/Pyrception/pyrception-utils/pyrception_utils/datasetinsights_master/datasetinsights/: __main__.py  constants.py  dashboard.py
com.unity.perception/Editor/Pyrception/pyrception-utils/pyrception_utils/datasetinsights_master/datasetinsights/commands/: __init__.py  download.py
com.unity.perception/Editor/Pyrception/pyrception-utils/pyrception_utils/datasetinsights_master/datasetinsights/datasets/: exceptions.py  synthetic.py
com.unity.perception/Editor/Pyrception/pyrception-utils/pyrception_utils/datasetinsights_master/datasetinsights/io/: __init__.py  bbox.py  download.py  exceptions.py  gcs.py
com.unity.perception/Editor/Pyrception/pyrception-utils/pyrception_utils/datasetinsights_master/datasetinsights/stats/: __init__.py  statistics.py
com.unity.perception/Editor/Pyrception/pyrception-utils/pyrception_utils/datasetinsights_master/docs/: Makefile  README.md  requirements.txt
com.unity.perception/Editor/Pyrception/pyrception-utils/pyrception_utils/datasetinsights_master/docs/source/: Synthetic_Dataset_Schema.md  conf.py  datasetinsights.datasets.rst  datasetinsights.datasets.unity_perception.rst  datasetinsights.io.downloader.rst  datasetinsights.io.rst  datasetinsights.rst  (+4 more)
com.unity.perception/Editor/Pyrception/pyrception-utils/pyrception_utils/datasetinsights_master/tf-dataflow/: Dockerfile  README.md  dataflow-run.sh  main.py  real_data_loader.py  requirements.txt  sample-role.yaml  setup.py
(+1311 files in other folders)
